--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-# Dan Development Scene
+# Development Scene
 Assets/Scenes/Dan.unity
 Assets/Scenes/Dan.unity.meta
