--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ crashlytics-build.properties
 # Development Scene
 Assets/Scenes/Dan.unity
 Assets/Scenes/Dan.unity.meta
+Assets/Scenes/Janoth.unity.meta
+Assets/Scenes/Janoth.unity
