Added Adam Scene

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Assets/Scenes/Dan.unity
 Assets/Scenes/Dan.unity.meta
 Assets/Scenes/Janoth.unity.meta
 Assets/Scenes/Janoth.unity
+Assets/Scenes/Adam.unity.meta
+Assets/Scenes/Adam.unity
