--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ Assets/Scenes/Janoth.unity.meta
 Assets/Scenes/Janoth.unity
 Assets/Scenes/Adam.unity.meta
 Assets/Scenes/Adam.unity
+Assets/Scenes/Haidar.unity.meta
+Assets/Scenes/Haidar.unity
